<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:layout_marginVertical="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvNamaKaryawan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_karyawan"
            android:textSize="@dimen/nama_karyawan"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvPosisiKaryawan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posisi_karyawan"
            android:textSize="@dimen/posisi_karyawan"
            />

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvDetail"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/tvHapus"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/hapus"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>